app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iotplayground
  name: iotplayground-service
spec:
  type: ClusterIP
  selector:
    app: iotplayground
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
